删除无效引用